--- a/app/Resources/views/groups/organisation_groups.html.twig
+++ b/app/Resources/views/groups/organisation_groups.html.twig
@@ -22,7 +22,7 @@
                 <li class="group_section edit" data-url="{{ path('group_details', {'id': group.id}) }}">
                     <div>
                         <i class="fa fa-user green"></i>
-                        <span>12</span>
+                        <span>{{ group.userCount }}</span>
                     </div>
                     <div>
                         <p>{{ group.name }}</p>
@@ -46,7 +46,7 @@
                 <li class="group_section edit" data-url="{{ path('group_details', {'id': group.id}) }}">
                     <div>
                         <i class="fa fa-user green"></i>
-                        <span>12</span>
+                        <span>{{ group.userCount }}</span>
                     </div>
                     <div>
                         <p>{{ group.name }}</p>
@@ -70,7 +70,7 @@
                 <li class="group_section edit" data-url="{{ path('group_details', {'id': group.id}) }}">
                     <div>
                         <i class="fa fa-user green"></i>
-                        <span>12</span>
+                        <span>{{ group.userCount }}</span>
                     </div>
                     <div>
                         <p>{{ group.name }}</p>
