Updated button text

--- a/app/Resources/views/popups/notifications.html.twig
+++ b/app/Resources/views/popups/notifications.html.twig
@@ -32,7 +32,7 @@
                 </a>
                 <a href="#" class="button_grey cancel"
                    data-url="{{ path('membership_delete', {'groupId': notification.group.id, 'userId': notification.from.id}) }}">
-                    {{ 'Annuleer'|trans }}
+                    {{ 'Afwijzen'|trans }}
                 </a>
             </article>
         {% endfor %}
