--- a/web/css/pace-theme-flash.css
+++ b/web/css/pace-theme-flash.css
@@ -1,4 +1,3 @@
-/* This is a compiled file, you should be editing the file in the templates directory */
 .pace {
   -webkit-pointer-events: none;
   pointer-events: none;
@@ -12,7 +11,7 @@
 }
 
 .pace .pace-progress {
-  background: #000000;
+  background: #52b2cd;
   position: fixed;
   z-index: 2000;
   top: 0;
@@ -27,7 +26,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #000000, 0 0 5px #000000;
+  box-shadow: 0 0 10px #52b2cd, 0 0 5px #52b2cd;
   opacity: 1.0;
   -webkit-transform: rotate(3deg) translate(0px, -4px);
   -moz-transform: rotate(3deg) translate(0px, -4px);
@@ -45,8 +44,8 @@
   width: 14px;
   height: 14px;
   border: solid 2px transparent;
-  border-top-color: #000000;
-  border-left-color: #000000;
+  border-top-color: #52b2cd;
+  border-left-color: #52b2cd;
   border-radius: 10px;
   -webkit-animation: pace-spinner 400ms linear infinite;
   -moz-animation: pace-spinner 400ms linear infinite;
