WIP on prospect view in group detail

--- a/app/Resources/views/popups/group_members.html.twig
+++ b/app/Resources/views/popups/group_members.html.twig
@@ -6,18 +6,22 @@
         </div>
 
         {% if is_granted('EDIT', group) %}
-            <a href="#" data-url="{{ path('membership_delete', {groupId: group.id, userId: member.user.id}) }}" class="delete rounded">
-                <i class="fa fa-minus"></i>
-            </a>
+            {% if member.role == 'prospect' %}
+                Prospect: {{ attribute(notifications, member.user.id).message }}
+            {% else %}
+                <a href="#" data-url="{{ path('membership_delete', {groupId: group.id, userId: member.user.id}) }}" class="delete rounded">
+                    <i class="fa fa-minus"></i>
+                </a>
 
-            <select name="roles" class="roles" data-url="{{ path('membership_update', {groupId: group.id, userId: member.user.id}) }}">
-                <option value="admin" {% if member.role == 'admin' %}selected{% endif %}>
-                    {{ 'Admin'|trans }}
-                </option>
-                <option value="member" {% if member.role == 'member' %}selected{% endif %}>
-                    {{ 'Member'|trans }}
-                </option>
-            </select>
+                <select name="roles" class="roles" data-url="{{ path('membership_update', {groupId: group.id, userId: member.user.id}) }}">
+                    <option value="admin" {% if member.role == 'admin' %}selected{% endif %}>
+                        {{ 'Admin'|trans }}
+                    </option>
+                    <option value="member" {% if member.role == 'member' %}selected{% endif %}>
+                        {{ 'Member'|trans }}
+                    </option>
+                </select>
+            {% endif %}
         {% endif %}
     </li>
 {% endfor %}
