Added csv export action

--- a/app/Resources/views/popups/group_details.html.twig
+++ b/app/Resources/views/popups/group_details.html.twig
@@ -98,7 +98,7 @@
                 </a>
             </li>
             <li>
-                <a id="download_group_link" href="#">
+                <a id="download_group_link" href="{{ path('group_export_members', {'id': group.id}) }}">
                     <i class="fa fa-download"></i>
                 </a>
             </li>
