Integrated prospect notifications into group details popup

--- a/app/Resources/views/popups/group_members.html.twig
+++ b/app/Resources/views/popups/group_members.html.twig
@@ -7,13 +7,48 @@
 
         {% if is_granted('EDIT', group) %}
             {% if member.role == 'prospect' %}
-                Prospect: {{ attribute(notifications, member.user.id).message }}
+                <div class="prospect">
+                    Prospect
+                    {% if attribute(notifications, member.user.id) is defined %}
+                        {% set notification = attribute(notifications, member.user.id) %}
+                        <article class="notification" data-url="{{ path('notification_process', {'id': notification.id}) }}">
+                            <table>
+                                <tr>
+                                    <td>{{ 'Datum'|trans }}</td>
+                                    <td>{{ notification.created|localizeddate('medium', 'none') }}</td>
+                                </tr>
+                                <tr>
+                                    <td>{{ 'Groep'|trans }}</td>
+                                    <td>{{ notification.group.name }}</td>
+                                </tr>
+                                <tr>
+                                    <td>{{ 'Gebruiker'|trans }}</td>
+                                    <td>{{ notification.from.name }}</td>
+                                </tr>
+                                <tr>
+                                    <td>{{ 'Bericht'|trans }}</td>
+                                    <td>{{ notification.message }}</td>
+                                </tr>
+                            </table>
+                        </article>
+                    {% endif %}
+                    <a href="#" class="button_blue confirm"
+                       data-url="{{ path('membership_confirm', {'groupId': group.id, 'userId': member.user.id}) }}">
+                        {{ 'Accepteer'|trans }}
+                    </a>
+                    <a href="#" class="button_grey cancel"
+                       data-url="{{ path('membership_delete', {'groupId': group.id, 'userId': member.user.id}) }}">
+                        {{ 'Afwijzen'|trans }}
+                    </a>
+                </div>
             {% else %}
-                <a href="#" data-url="{{ path('membership_delete', {groupId: group.id, userId: member.user.id}) }}" class="delete rounded">
+                <a href="#" class="delete rounded"
+                   data-url="{{ path('membership_delete', {groupId: group.id, userId: member.user.id}) }}">
                     <i class="fa fa-minus"></i>
                 </a>
 
-                <select name="roles" class="roles" data-url="{{ path('membership_update', {groupId: group.id, userId: member.user.id}) }}">
+                <select name="roles" class="roles"
+                        data-url="{{ path('membership_update', {groupId: group.id, userId: member.user.id}) }}">
                     <option value="admin" {% if member.role == 'admin' %}selected{% endif %}>
                         {{ 'Admin'|trans }}
                     </option>
