Added/Updated lazy loading for group (search) and group users

--- a/app/Resources/views/groups/search.html.twig
+++ b/app/Resources/views/groups/search.html.twig
@@ -15,6 +15,8 @@
     <ul data-url="{{ path('groups', {'type': 'results'}) }}">
         {% if query %}
             {% include ':groups:search-results.html.twig' %}
+        {% else %}
+            <div class="jscroll-inner"></div>
         {% endif %}
     </ul>
 
