--- a/app/Resources/views/groups/all_groups.html.twig
+++ b/app/Resources/views/groups/all_groups.html.twig
@@ -13,7 +13,7 @@
     </section>
 
     <ul>
-        {% include ':groups:all_groups-groups.html.twig' %}
+        <div class="jscroll-inner">{% include ':groups:all_groups-groups.html.twig' %}</div>
     </ul>
 
 </div>
