--- a/web/css/grouphub.css
+++ b/web/css/grouphub.css
@@ -1424,3 +1424,9 @@ header .username {
 #group_search div:nth-child(2) p:last-child {
     color: #a6a6a6;
 }
+
+li.spinner {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
