--- a/app/Resources/views/groups/organisation_groups.html.twig
+++ b/app/Resources/views/groups/organisation_groups.html.twig
@@ -13,7 +13,7 @@
 
     {% if ownerOtherGroups %}
         <section class="owned">
-            <i class="fa fa-angle-down"></i>
+            <i class="fa fa-fw fa-angle-down"></i>
             <h3>{{ 'Owner'|trans }}</h3>
         </section>
 
@@ -37,7 +37,7 @@
 
     {% if adminOtherGroups %}
         <section class="owned">
-            <i class="fa fa-angle-down"></i>
+            <i class="fa fa-fw fa-angle-down"></i>
             <h3>{{ 'Administrator'|trans }}</h3>
         </section>
 
@@ -61,7 +61,7 @@
 
     {% if memberOtherGroups %}
         <section class="owned">
-            <i class="fa fa-angle-down"></i>
+            <i class="fa fa-fw fa-angle-down"></i>
             <h3>{{ 'Member'|trans }}</h3>
         </section>
 
