Use traditional submits for joining/leaving a group

--- a/app/Resources/views/popups/join_group.html.twig
+++ b/app/Resources/views/popups/join_group.html.twig
@@ -6,7 +6,7 @@
             <p>{{ 'Lidmaatschap aanvragen'|trans }}</p>
         </header>
 
-        <form action="">
+        <form action="" method="post">
             <div class="form_element">
                 <span>{{ 'Naam group'|trans }}</span>
                 <p class="group-name"></p>
