--- a/app/Resources/views/groups/all_groups.html.twig
+++ b/app/Resources/views/groups/all_groups.html.twig
@@ -7,7 +7,7 @@
         {% include ':groups:_sort.html.twig' with {'color': 'purple'} %}
 
         <div>
-            <h3>{{ 'ALL GROUPS'|trans }}</h3>
+            <h3>{{ attribute(_context, 'all_groups_column_title_' ~ selectedLang)|upper }}</h3>
             <p>{{ 'There is a total of %count% groups'|trans({'%count%': groups.totalCount}) }}</p>
         </div>
     </section>
