Added configurable documentation link

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,7 +33,7 @@
             </a>
         </li>
         <li>
-            <a class="button_grey" href="#" target="_blank">
+            <a class="button_grey" href="{{ documentation_url }}" target="_blank">
                 {{ 'Info'|trans }}
             </a>
         </li>
