Added logoff info tooltip

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,7 +37,7 @@
                 {{ 'Info'|trans }}
             </a>
         </li>
-        <li class="username">{{ app.user.username }} <i class="fa fa-question-circle"></i></li>
+        <li class="username">{{ app.user.username }} <i class="fa fa-question-circle tooltip" title="{{ 'logout_info'|trans }}"></i></li>
         <li class="language-selector">
             {% set selectedLang = app.request.locale %}
             {% set otherLang = selectedLang == 'en' ? 'nl' : 'en' %}
