--- a/app/Resources/views/popups/group_users.html.twig
+++ b/app/Resources/views/popups/group_users.html.twig
@@ -12,34 +12,13 @@
                 <i class="fa fa-plus"></i>
             </a>
         {% else %}
+
             {% if attribute(members, user.id).role == 'prospect' %}
-                <div class="prospect">
-                    {{ 'Prospect'|trans }}
-                    {% if attribute(notifications, user.id) is defined %}
-                        {% set notification = attribute(notifications, user.id) %}
-                        <article class="notification" data-url="{{ path('notification_process', {'id': notification.id}) }}">
-                            <table>
-                                <tr>
-                                    <td>{{ 'Datum'|trans }}</td>
-                                    <td>{{ notification.created|localizeddate('medium', 'none') }}</td>
-                                </tr>
-                                <tr>
-                                    <td>{{ 'Bericht'|trans }}</td>
-                                    <td>{{ notification.message }}</td>
-                                </tr>
-                            </table>
-                        </article>
-                    {% endif %}
-                    <a href="#" class="button_blue confirm"
-                       data-url="{{ path('membership_confirm', {'groupId': group.id, 'userId': user.id}) }}">
-                        {{ 'Accepteer'|trans }}
-                    </a>
-                    <a href="#" class="button_grey cancel"
-                       data-url="{{ path('membership_delete', {'groupId': group.id, 'userId': user.id}) }}">
-                        {{ 'Afwijzen'|trans }}
-                    </a>
-                </div>
+
+                {% include ':popups:_prospect.html.twig' %}
+
             {% else %}
+
                 <a href="#" class="delete rounded"
                    data-url="{{ path('membership_delete', {groupId: group.id, userId: user.id}) }}">
                     <i class="fa fa-minus"></i>
