WIP on syncing UI with application state

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,7 @@
     {% endstylesheets %}
 </head>
 
-<body class="index">
+<body class="index" data-user-id="{{ app.user.id }}">
 
 <header class="header">
     <ul>
