--- a/app/Resources/views/popups/group_details.html.twig
+++ b/app/Resources/views/popups/group_details.html.twig
@@ -1,4 +1,4 @@
-<div class="edit_group">
+<div class="edit_group" data-id="{{ group.id }}">
     <div class="left">
         <header>
             {% if form %}
