--- a/app/Resources/views/popups/group_users.html.twig
+++ b/app/Resources/views/popups/group_users.html.twig
@@ -1,6 +1,6 @@
 <div class="jscroll-inner">
 {% for user in users %}
-    <li>
+    <li data-user-id="{{ user.id }}">
         <div>
             <p>{{ user.name }}</p>
             <span>{{ user.email }}&nbsp;</span>
